--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
     "rehype-pretty-code": "^0.14.1",
-    "remark-gfm": "^4.0.1",
-    "shiki": "^3.2.2",
+    "rehype-slug": "^6.0.0",
+    "mdast-util-toc": "^7.0.0",
+    "remark-gfm": "^4.0.0",
+    "shiki": "^1.16.3",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
